--- a/Canards.ioc
+++ b/Canards.ioc
@@ -34,14 +34,15 @@ Mcu.CPN=STM32F446RET6
 Mcu.Family=STM32F4
 Mcu.IP0=DMA
 Mcu.IP1=FREERTOS
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SPI2
-Mcu.IP5=SPI3
-Mcu.IP6=SYS
-Mcu.IP7=USART2
-Mcu.IP8=WWDG
-Mcu.IPNb=9
+Mcu.IP2=I2C1
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SPI2
+Mcu.IP6=SPI3
+Mcu.IP7=SYS
+Mcu.IP8=USART2
+Mcu.IP9=WWDG
+Mcu.IPNb=10
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -53,10 +54,12 @@ Mcu.Pin13=PA14
 Mcu.Pin14=PC10
 Mcu.Pin15=PC11
 Mcu.Pin16=PB3
-Mcu.Pin17=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin18=VP_SYS_VS_tim6
-Mcu.Pin19=VP_WWDG_VS_WWDG
+Mcu.Pin17=PB6
+Mcu.Pin18=PB7
+Mcu.Pin19=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin20=VP_SYS_VS_tim6
+Mcu.Pin21=VP_WWDG_VS_WWDG
 Mcu.Pin3=PH0-OSC_IN
 Mcu.Pin4=PH1-OSC_OUT
 Mcu.Pin5=PC1
@@ -64,7 +67,7 @@ Mcu.Pin6=PC2
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA5
-Mcu.PinsNb=20
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
@@ -121,6 +124,14 @@ PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
+PB6.GPIOParameters=GPIO_Pu
+PB6.GPIO_Pu=GPIO_PULLUP
+PB6.Mode=I2C
+PB6.Signal=I2C1_SCL
+PB7.GPIOParameters=GPIO_Pu
+PB7.GPIO_Pu=GPIO_PULLUP
+PB7.Mode=I2C
+PB7.Signal=I2C1_SDA
 PC1.Mode=Full_Duplex_Master
 PC1.Signal=SPI2_MOSI
 PC10.Mode=Full_Duplex_Master
