--- a/Canards.ioc
+++ b/Canards.ioc
@@ -25,10 +25,13 @@ Dma.SPI3_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.SPI3_RX.1.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI3_RX.1.Priority=DMA_PRIORITY_LOW
 Dma.SPI3_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-FREERTOS.IPParameters=Tasks01
+FREERTOS.IPParameters=Tasks01,configENABLE_FPU
 FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configENABLE_FPU=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2C1.ClockSpeed=20000
+I2C1.IPParameters=ClockSpeed
 KeepUserPlacement=false
 Mcu.CPN=STM32F446RET6
 Mcu.Family=STM32F4
@@ -41,8 +44,7 @@ Mcu.IP5=SPI2
 Mcu.IP6=SPI3
 Mcu.IP7=SYS
 Mcu.IP8=USART2
-Mcu.IP9=WWDG
-Mcu.IPNb=10
+Mcu.IPNb=9
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -60,7 +62,6 @@ Mcu.Pin19=PB7
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin20=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin21=VP_SYS_VS_tim6
-Mcu.Pin22=VP_WWDG_VS_WWDG
 Mcu.Pin3=PH0-OSC_IN
 Mcu.Pin4=PH1-OSC_OUT
 Mcu.Pin5=PC1
@@ -68,7 +69,7 @@ Mcu.Pin6=PC2
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA5
-Mcu.PinsNb=23
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
@@ -78,7 +79,7 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
 NVIC.DMA1_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Stream3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
-NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
@@ -122,18 +123,23 @@ PB0.Mode=Full_Duplex_Master
 PB0.Signal=SPI3_MOSI
 PB10.Mode=Full_Duplex_Master
 PB10.Signal=SPI2_SCK
+PB12.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB12.GPIO_Label=Magnetometer Interrupt
+PB12.GPIO_PuPd=GPIO_PULLDOWN
 PB12.Locked=true
 PB12.Signal=GPXTI12
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
-PB6.GPIOParameters=GPIO_Pu
+PB6.GPIOParameters=GPIO_Speed,GPIO_Pu
 PB6.GPIO_Pu=GPIO_PULLUP
+PB6.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
-PB7.GPIOParameters=GPIO_Pu
+PB7.GPIOParameters=GPIO_Speed,GPIO_Pu
 PB7.GPIO_Pu=GPIO_PULLUP
+PB7.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
 PC1.Mode=Full_Duplex_Master
@@ -142,11 +148,8 @@ PC10.Mode=Full_Duplex_Master
 PC10.Signal=SPI3_SCK
 PC11.Mode=Full_Duplex_Master
 PC11.Signal=SPI3_MISO
-PC13.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
-PC13.GPIO_Label=B1 [Blue PushButton]
-PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PC13.Locked=true
-PC13.Signal=GPXTI13
+PC13.Signal=GPIO_Input
 PC14-OSC32_IN.Locked=true
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
@@ -192,7 +195,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_SPI3_Init-SPI3-false-HAL-true,7-MX_WWDG_Init-WWDG-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_SPI3_Init-SPI3-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -244,8 +247,6 @@ RCC.VCOSAIOutputFreq_Value=192000000
 RCC.VcooutputI2S=96000000
 SH.GPXTI12.0=GPIO_EXTI12
 SH.GPXTI12.ConfNb=1
-SH.GPXTI13.0=GPIO_EXTI13
-SH.GPXTI13.ConfNb=1
 SPI2.CalculateBaudRate=21.0 MBits/s
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
@@ -262,8 +263,6 @@ VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_tim6.Mode=TIM6
 VP_SYS_VS_tim6.Signal=SYS_VS_tim6
-VP_WWDG_VS_WWDG.Mode=WWDG_Activate
-VP_WWDG_VS_WWDG.Signal=WWDG_VS_WWDG
 board=NUCLEO-F446RE
 boardIOC=true
 rtos.0.ip=FREERTOS
