--- a/Canards.ioc
+++ b/Canards.ioc
@@ -43,27 +43,31 @@ Mcu.IP7=USART2
 Mcu.IPNb=8
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PC13
-Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA5
-Mcu.Pin11=PB0
-Mcu.Pin12=PB10
-Mcu.Pin13=PA13
-Mcu.Pin14=PA14
-Mcu.Pin15=PC10
-Mcu.Pin16=PC11
-Mcu.Pin17=PB3
-Mcu.Pin18=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin19=VP_SYS_VS_tim6
-Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin3=PH0-OSC_IN
-Mcu.Pin4=PH1-OSC_OUT
-Mcu.Pin5=PC0
-Mcu.Pin6=PC1
-Mcu.Pin7=PC2
-Mcu.Pin8=PA2
-Mcu.Pin9=PA3
-Mcu.PinsNb=20
+Mcu.Pin0=PC14-OSC32_IN
+Mcu.Pin1=PC15-OSC32_OUT
+Mcu.Pin10=PB0
+Mcu.Pin11=PB10
+Mcu.Pin12=PB12
+Mcu.Pin13=PB13
+Mcu.Pin14=PB14
+Mcu.Pin15=PB15
+Mcu.Pin16=PC6
+Mcu.Pin17=PA13
+Mcu.Pin18=PA14
+Mcu.Pin19=PC10
+Mcu.Pin2=PH0-OSC_IN
+Mcu.Pin20=PC11
+Mcu.Pin21=PB3
+Mcu.Pin22=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin23=VP_SYS_VS_tim6
+Mcu.Pin3=PH1-OSC_OUT
+Mcu.Pin4=PC0
+Mcu.Pin5=PC1
+Mcu.Pin6=PC2
+Mcu.Pin7=PA2
+Mcu.Pin8=PA3
+Mcu.Pin9=PA5
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
@@ -73,6 +77,7 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
 NVIC.DMA1_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Stream3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
+NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
@@ -116,6 +121,25 @@ PB0.Mode=Full_Duplex_Master
 PB0.Signal=SPI3_MOSI
 PB10.Mode=Full_Duplex_Master
 PB10.Signal=SPI2_SCK
+PB12.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB12.GPIO_Label=Magnetometer INT
+PB12.GPIO_PuPd=GPIO_PULLDOWN
+PB12.Locked=true
+PB12.Signal=GPXTI12
+PB13.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB13.GPIO_Label=Accelerometer INT
+PB13.GPIO_PuPd=GPIO_PULLDOWN
+PB13.Locked=true
+PB13.Signal=GPXTI13
+PB14.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB14.GPIO_Label=Gyroscope INT
+PB14.GPIO_PuPd=GPIO_PULLDOWN
+PB14.Locked=true
+PB14.Signal=GPXTI14
+PB15.GPIOParameters=GPIO_Label
+PB15.GPIO_Label=ACCEL CS
+PB15.Locked=true
+PB15.Signal=GPIO_Output
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
@@ -128,11 +152,6 @@ PC10.Mode=Full_Duplex_Master
 PC10.Signal=SPI3_SCK
 PC11.Mode=Full_Duplex_Master
 PC11.Signal=SPI3_MISO
-PC13.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
-PC13.GPIO_Label=B1 [Blue PushButton]
-PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-PC13.Locked=true
-PC13.Signal=GPXTI13
 PC14-OSC32_IN.Locked=true
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
@@ -141,6 +160,10 @@ PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PC2.Mode=Full_Duplex_Master
 PC2.Signal=SPI2_MISO
+PC6.GPIOParameters=GPIO_Label
+PC6.GPIO_Label=GYRO CS
+PC6.Locked=true
+PC6.Signal=GPIO_Output
 PH0-OSC_IN.Locked=true
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
@@ -178,7 +201,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_SPI3_Init-SPI3-false-HAL-true,7-MX_WWDG_Init-WWDG-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_SPI3_Init-SPI3-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -228,11 +251,16 @@ RCC.VCOOutputFreq_Value=336000000
 RCC.VCOSAIInputFreq_Value=1000000
 RCC.VCOSAIOutputFreq_Value=192000000
 RCC.VcooutputI2S=96000000
+SH.GPXTI12.0=GPIO_EXTI12
+SH.GPXTI12.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-SPI2.CalculateBaudRate=21.0 MBits/s
+SH.GPXTI14.0=GPIO_EXTI14
+SH.GPXTI14.ConfNb=1
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
+SPI2.CalculateBaudRate=328.125 KBits/s
 SPI2.Direction=SPI_DIRECTION_2LINES
-SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
 SPI3.CalculateBaudRate=21.0 MBits/s
