--- a/Canards.ioc
+++ b/Canards.ioc
@@ -40,30 +40,29 @@ Mcu.IP4=SPI2
 Mcu.IP5=SPI3
 Mcu.IP6=SYS
 Mcu.IP7=USART2
-Mcu.IP8=WWDG
-Mcu.IPNb=9
+Mcu.IPNb=8
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PB0
-Mcu.Pin11=PB10
-Mcu.Pin12=PA13
-Mcu.Pin13=PA14
-Mcu.Pin14=PC10
-Mcu.Pin15=PC11
-Mcu.Pin16=PB3
-Mcu.Pin17=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin18=VP_SYS_VS_tim6
-Mcu.Pin19=VP_WWDG_VS_WWDG
+Mcu.Pin10=PA5
+Mcu.Pin11=PB0
+Mcu.Pin12=PB10
+Mcu.Pin13=PA13
+Mcu.Pin14=PA14
+Mcu.Pin15=PC10
+Mcu.Pin16=PC11
+Mcu.Pin17=PB3
+Mcu.Pin18=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin19=VP_SYS_VS_tim6
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PH0-OSC_IN
 Mcu.Pin4=PH1-OSC_OUT
-Mcu.Pin5=PC1
-Mcu.Pin6=PC2
-Mcu.Pin7=PA2
-Mcu.Pin8=PA3
-Mcu.Pin9=PA5
+Mcu.Pin5=PC0
+Mcu.Pin6=PC1
+Mcu.Pin7=PC2
+Mcu.Pin8=PA2
+Mcu.Pin9=PA3
 Mcu.PinsNb=20
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -121,6 +120,8 @@ PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
+PC0.Locked=true
+PC0.Signal=GPIO_Output
 PC1.Mode=Full_Duplex_Master
 PC1.Signal=SPI2_MOSI
 PC10.Mode=Full_Duplex_Master
@@ -245,8 +246,6 @@ VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_tim6.Mode=TIM6
 VP_SYS_VS_tim6.Signal=SYS_VS_tim6
-VP_WWDG_VS_WWDG.Mode=WWDG_Activate
-VP_WWDG_VS_WWDG.Signal=WWDG_VS_WWDG
 board=NUCLEO-F446RE
 boardIOC=true
 rtos.0.ip=FREERTOS
