--- a/Canards.ioc
+++ b/Canards.ioc
@@ -33,14 +33,15 @@ KeepUserPlacement=false
 Mcu.CPN=STM32F446RET6
 Mcu.Family=STM32F4
 Mcu.IP0=DMA
-Mcu.IP1=FREERTOS
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SPI2
-Mcu.IP5=SPI3
-Mcu.IP6=SYS
-Mcu.IP7=USART2
-Mcu.IPNb=8
+Mcu.IP1=FATFS
+Mcu.IP2=FREERTOS
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SPI2
+Mcu.IP6=SPI3
+Mcu.IP7=SYS
+Mcu.IP8=USART2
+Mcu.IPNb=9
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -48,14 +49,16 @@ Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PA5
 Mcu.Pin11=PB0
 Mcu.Pin12=PB10
-Mcu.Pin13=PA13
-Mcu.Pin14=PA14
-Mcu.Pin15=PC10
-Mcu.Pin16=PC11
-Mcu.Pin17=PB3
-Mcu.Pin18=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin19=VP_SYS_VS_tim6
+Mcu.Pin13=PB12
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14
+Mcu.Pin16=PC10
+Mcu.Pin17=PC11
+Mcu.Pin18=PB3
+Mcu.Pin19=VP_FATFS_VS_Generic
 Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin20=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin21=VP_SYS_VS_tim6
 Mcu.Pin3=PH0-OSC_IN
 Mcu.Pin4=PH1-OSC_OUT
 Mcu.Pin5=PC0
@@ -63,7 +66,7 @@ Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PA2
 Mcu.Pin9=PA3
-Mcu.PinsNb=20
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
@@ -116,6 +119,12 @@ PB0.Mode=Full_Duplex_Master
 PB0.Signal=SPI3_MOSI
 PB10.Mode=Full_Duplex_Master
 PB10.Signal=SPI2_SCK
+PB12.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
+PB12.GPIO_Label=SD_CARD_CS
+PB12.GPIO_PuPd=GPIO_PULLUP
+PB12.Locked=true
+PB12.PinState=GPIO_PIN_SET
+PB12.Signal=GPIO_Output
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
@@ -150,6 +159,7 @@ PH1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
+ProjectManager.CompilerLinker=GCC
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=true
@@ -178,7 +188,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_SPI3_Init-SPI3-false-HAL-true,7-MX_WWDG_Init-WWDG-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_SPI3_Init-SPI3-false-HAL-true,7-MX_FATFS_Init-FATFS-false-HAL-false
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -242,6 +252,8 @@ SPI3.Mode=SPI_MODE_MASTER
 SPI3.VirtualType=VM_MASTER
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
+VP_FATFS_VS_Generic.Mode=User_defined
+VP_FATFS_VS_Generic.Signal=FATFS_VS_Generic
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_tim6.Mode=TIM6
